# portfolio-backend

./: db.sqlite3  pyproject.toml  requirements.txt
portfolio/: models.py  serializers.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py
portfolio_project/: settings.py  urls.py  wsgi.py
